[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/login/LoginScreen.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 512.233 ]
}

[node name="Background" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.5
margin_top = -179.884
margin_right = 170.5
margin_bottom = -118.884
text = "Enter name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -93.7705
margin_right = 89.0
margin_bottom = -22.7705
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.941
margin_top = 35.3652
margin_right = 113.059
margin_bottom = 102.365
text = "Create Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfflineButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = 154.025
margin_right = 102.5
margin_bottom = 221.025
text = "Play Offline"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 1 )

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
